New dependencie (nodemailer)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {},
