--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.11",
+    "nodemailer-smtp-transport": "^2.7.4",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {},
