--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node src/server.js",
     "test": "node src/server.js"
   },
   "repository": {
